<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">EpiAndroid</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="intra" translatable="false">Epitech Intra</string>
    <string name="profil">Profil</string>
    <string name="modules">Modules</string>
    <string name="planning">Planning</string>
    <string name="elearning">E-learning</string>
    <string name="administration">Administration</string>
    <string name="title_activity_profil" translatable="false">Profil</string>
    <string name="retour">Retour</string>

</resources>
